mType/tests/testFiles/import/error/importEmptyBraces.mt
// Test: Empty braces - importing nothing
@Script
import { } from "./modules/SomeModule.mt"

print("Nothing imported");
